--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     api 'com.google.android.material:material:1.3.0-alpha01'
+    implementation 'androidx.security:security-crypto:1.0.0-rc02'
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
